# graphbook

./: .dockerignore  .gitignore  CLAUDE.md  CNAME  Dockerfile  Dockerfile.multi  LICENSE  Makefile  README.md  config.yaml  hf.config.yaml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-debug.yml  build-space.yml  build.yml  doc-fix.yml  pypi.yml  static.yml  test-pypi.yml  tests.yml
docker/: Dockerfile  Dockerfile.hfspace
docs/: concepts.rst  conf.py  contributing.rst  examples.rst  getting_started.rst  guides.rst  index.rst  installing.rst  reference.rst  requirements.txt  robots.txt
docs/_templates/: breadcrumbs.html  header.html  layout.html  searchbox.html
docs/guides/: first-workflow.rst  image-segmentation.rst  index.rst  pokemon-classifier.rst
docs/learn/: basics.rst  batch.rst  concepts.rst  document.rst  dump.rst  filter.rst  first-workflow.rst  image-segmentation.rst  index.rst  load-images.rst  logging.rst  pokemon-classifier.rst  prompt.rst  using-ray.rst
docs/learn/examples/: hello-world.rst  index.rst
docs/reference/: decorators.rst  events.rst  graphs.rst  index.rst  logging.rst  notes.rst  params.rst  prompts.rst  ray.rst  resources.rst  steps.rst  utils.rst
example_extension/: pyproject.toml
example_extension/example_extension/: __init__.py  steps.py
example_extension/web/: index.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
example_extension/web/src/: ExampleNode.tsx  ExamplePanel.tsx  main.tsx
example_plugin/: pyproject.toml
example_plugin/example_plugin/: __init__.py
example_plugin/web/: package-lock.json  package.json  tsconfig.json  webpack.config.js
example_plugin/web/src/: ExamplePanel.tsx
examples/: beta_3stage_image.py  beta_basic_pipeline.py  beta_config_pipeline.py  beta_cycle_pipeline.py  beta_graph_stats.py  beta_image_pipeline.py  beta_interactive_pipeline.py  beta_training_loop.py  logging_example.py
examples/workflows/: README.md
examples/workflows/python/: ImageTransforms.py  MnistClassifier.py  PageScraper.py  Pokemon.py  SampleWorkflow.py  WebsiteScraper.py
graphbook/: __init__.py  clients.py  config.py  custom_nodes.py  dataloading.py  decorators.py  doc2md.py  exports.py  logger.py  logging.py  main.py  media.py  nodes.py  note.py  plugins.py  processing.py  prompts.py  remote_processing.py  serialization.py  serve.py  server.py  shm.py  state.py  transport.py  utils.py  viewer.py  web.py
graphbook/beta/: README.md  __init__.py  cli.py
graphbook/beta/core/: __init__.py  client.py  config.py  dag.py  decorators.py  state.py  tracker.py
graphbook/beta/extensions/: __init__.py  mlflow.py  tensorboard.py
graphbook/beta/extras/: __init__.py
graphbook/beta/logging/: __init__.py  logger.py  queue.py  serializers.py
graphbook/beta/mcp/: __init__.py  server.py  stdio.py  tools.py
graphbook/beta/server/: __init__.py  app.py  daemon.py  manager.py  protocol.py  runner.py
graphbook/beta/terminal/: __init__.py  display.py
graphbook/core/: __init__.py  cli.py  clients.py  config.py  dataloading.py  decorators.py  media.py  nodes.py  note.py  output_log.py  plugins.py  prompts.py  serialization.py  shm.py  utils.py  viewer.py  web.py
graphbook/core/logs/: __init__.py  data.py  web.py
graphbook/core/processing/: event_handler.py  graph_processor.py  graph_state.py  state.py  web_processor.py
graphbook/core/resources/: __init__.py
graphbook/core/sample_assets/: SampleWorkflow.json  SampleWorkflow.md  sample_nodes.py
graphbook/core/steps/: arithmetic.py  base.py  io.py  logging.rst  using-ray.rst
graphbook/logging/: __init__.py  dag.py  data.py  logger.py  torch.py  web.py
graphbook/processing/: node.py  ray_api.py  ray_processor.py  serve_processor.py  state.py  web_processor.py
graphbook/ray/: __init__.py  cli.py  ray_api.py  ray_client.py  ray_executor.py  ray_img.py  ray_processor.py  web.py
graphbook/resources/: __init__.py  base.py
graphbook/sample_assets/: SampleWorkflow.json  sample_nodes.py
graphbook/steps/: __init__.py  arithmetic.py  base.py  decorators.py  hf_transformers.py  io.py  remote.py
scripts/: graphbook  utils.py
src/: custom_nodes.py  exports.py  media.py  processing.py  server.py  state.py  utils.py  viewer.py
src/graphbook/: dataloading.py  state.py
src/graphbook/resources/: base.py  hf_transformers.py
tests/: arithmetic.py  test_processor.py  test_remote.py  test_steps.py
tests/beta/: test_cli.py  test_client.py  test_daemon.py  test_decorators.py  test_logging.py  test_mcp_tools.py  test_queue.py  test_server.py  test_tracker.py
tests/e2e/: common.py  test_example_workflows.py  test_isolated_users.py
tests/unit/: test_decorators.py  test_doc2md.py  test_python_workflows.py  test_steps_base.py  test_utils.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  App.tsx  DefaultWorkflow.json  api.ts  graph.js  graph.ts  graphstore.ts  index.css  plugins.ts  properties.ts  styles.ts  svg.tsx  utils.ts
web_beta/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web_beta/src/: App.tsx  main.tsx
(+193 files in other folders)
