[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "graphbook"
version = "0.8.1"
authors = ["Richard Franklin <rsamf@graphbook.ai>"]
description = "An extensible ML workflow framework built for data scientists and ML engineers."
keywords = ["ml", "workflow", "framework", "pytorch", "data science", "machine learning", "ai"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"
homepage = "https://graphbook.ai"
documentation = "https://docs.graphbook.ai"
repository = "https://github.com/graphbookai/graphbook"

[tool.poetry.scripts]
graphbook = "graphbook.main:main"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
aiohttp = "^3.9.4"
pillow = "^10.3.0"
python-magic = "^0.4.27"
watchdog = "^4.0.0"
torchvision = "^0.18.1"
psutil = "^6.0.0"
pyyaml = "^6.0.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
sphinxcontrib-applehelp = "^1.0.8"
sphinxcontrib-devhelp = "^1.0.6"
sphinxcontrib-htmlhelp = "^2.0.5"
sphinxcontrib-jquery = "^4.1"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-qthelp = "^1.0.7"
sphinxcontrib-serializinghtml = "^1.1.10"
pytest-asyncio = "^0.23.8"
sphinx-sitemap = "^2.6.0"
sphinxawesome-theme = "^5.2.0"
sphinx-design = "^0.6.1"
